# waveform-visualizer-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  build_macos.sh  build_rpi5.sh  readme.md
color_schemes/: default.json  midnight.json
shaders/: blit.frag  crt.frag  fisheye.frag  imager.frag  oscilloscope.frag  oscilloscope.vert  spectrogram.frag  spectrum.frag  spectrum.vert  text.frag  vu.frag  waveform.frag  waveform.vert
src/: ColorSchemes.h  Common.h  main.cpp
src/audio/: AudioAnalyzer.cpp  AudioAnalyzer.h  AudioCapture.cpp  AudioCapture.h  RingBuffer.h
src/config/: AppConfig.cpp  AppConfig.h  ColorSchemeLoader.cpp  ColorSchemeLoader.h  ColorSchemeValidation.cpp  ColorSchemeValidation.h
src/render/: GLHeaders.h  GPUBuffer.cpp  GPUBuffer.h  PostProcessor.cpp  PostProcessor.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  TextRenderer.cpp  TextRenderer.h
src/server/: CommandQueue.h  ControlServer.cpp  ControlServer.h
src/visualizers/: OscilloscopeVisualizer.cpp  OscilloscopeVisualizer.h  QuadVisualizer.cpp  QuadVisualizer.h  SpectrogramVisualizer.cpp  SpectrogramVisualizer.h  SpectrumVisualizer.cpp  SpectrumVisualizer.h  StereoImagerVisualizer.cpp  StereoImagerVisualizer.h  VUMeterVisualizer.cpp  VUMeterVisualizer.h  Visualizer.h  VisualizerManager.cpp  VisualizerManager.h  WaveformVisualizer.cpp  WaveformVisualizer.h
web/: index.html
